algemene aanpassingen HOME (index)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="utf-8">
-  <title>Peggy Van den Eynde | Portfolio</title>
+  <title>Peggy Van den Eynde | Vormgeving & Creatie</title>
   <meta name="description" content="Peggy Van den Eynde, portfolio, vormgeving & creatie">
   <meta name="keywords" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -39,45 +39,57 @@
 
     <ul class="menu-fullscreen">
       <li><a href="index.html">Home</a></li>
-      <li><a href="projects.html">Projects</a></li>
-      <li><a href="about-us.html">About us</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="portfolio.html">Portfolio</a></li>
+      <li><a href="over-mij.html">Over mij</a></li>
     </ul>
 
 </div>
 
 
 <!--Header-->
-<header class="boxed" id="header-white">
+<header id="fullscreen">
 
-  <div class="header-margin">
+    <div class="logo" id="full" style="display:none;"><a class="ajax-link" href="index.html">PEGGY VDE</a></div>
 
-    <div class="logo"><a class="ajax-link" href="index.html">THOMSOON</a></div>
-    <ul class="header-nav">
-      <li><a class="ajax-link" href="projects.html">Projects</a>
-        <ul>
-          <li><a class="ajax-link" href="projects.html">Projects</a></li>
-          <li><a class="ajax-link" href="single.html">Single project</a></li>
-          <li><a class="ajax-link" href="single-full.html">Single project fullscreen</a></li>
-        </ul>
-      </li>
-
-      <li><a class="ajax-link" href="about-me.html">About me</a></li>
-      <li><a class="ajax-link" href="contact.html">Contact</a></li>
-    </ul>
-
-    <ul class="social-icon">
-      <div class="social-index">
-      <li><a href="https://www.facebook.com/thomsooncom"><i class="fa fa-facebook"></i></a></li>
-      <li><a href="https://www.behance.net/TomaszMazurczak"><i class="fa fa-behance"></i></a></li>
+      <div class="menu-index" style="display:none;" id="button">
+      <i class="fa fa-bars"></i>
       </div>
-    </ul>
-
-  </div>
 
 </header>
 
-<div class="clear"></div>a
+
+<!--Header-->
+<header class="boxed" id="header-white">
+
+<div class="header-margin">
+
+  <div class="logo"><a class="ajax-link" href="index.html">PEGGY VDE</a></div>
+  <ul class="header-nav">
+    <li><a class="ajax-link" href="#">Portfolio</a>
+      <ul>
+        <li><a class="ajax-link" href="#">Portfolio</a></li>
+        <li><a class="ajax-link" href="#">Project #1</a></li>
+        <li><a class="ajax-link" href="#">Project #2</a></li>
+
+      </ul>
+
+    </li>
+
+    <li><a class="ajax-link" href="#">Over mij</a></li>
+  </ul>
+
+  <!-- <ul class="social-icon">
+    <div class="social-index">
+    <li><a href="https://www.facebook.com/thomsooncom"><i class="fa fa-facebook"></i></a></li>
+    <li><a href="https://www.behance.net/TomaszMazurczak"><i class="fa fa-behance"></i></a></li>
+    </div>
+  </ul> -->
+
+</div>
+
+</header>
+
+<div class="clear"></div>
 
   <!--Content-->
 
@@ -86,9 +98,9 @@
 
         <div class="text-intro" id="site-type">
 
-          <h1>My creative and simplicity modern</h1>
+          <h1>Vormgeving & creatie</h1>
           <h1 class="typewrite"><span>Portfolio</span></h1>
-          <p>Please check my portfolio. All project is clean and simplicity modern style. You can buy this template.</p>
+          <p>Hier vind je een selectie van mijn grafisch werk.</p>
 
         </div>
 
