--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
 
     <ul class="menu-fullscreen">
       <li><a href="index.html">Home</a></li>
-      <li><a href="portfolio.html">Portfolio</a></li>
+      <li><a href="index.html">Portfolio</a></li>
       <li><a href="over-mij.html">Over mij</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
 
 </div>
@@ -63,20 +64,22 @@
 
 <div class="header-margin">
 
-  <div class="logo"><a class="ajax-link" href="index.html">PEGGY VDE</a></div>
+  <div class="logo"><a class="ajax-link" href="index.html">PEGGY VAN DEN EYNDE</a></div>
   <ul class="header-nav">
-    <li><a class="ajax-link" href="#">Portfolio</a>
-      <ul>
-        <li><a class="ajax-link" href="#">Portfolio</a></li>
+    <li><a class="ajax-link" href="index.html">Portfolio</a>
+      <!-- <ul>
         <li><a class="ajax-link" href="#">Project #1</a></li>
         <li><a class="ajax-link" href="#">Project #2</a></li>
+        <li><a class="ajax-link" href="#">Project #3</a></li>
 
-      </ul>
+      </ul> -->
 
     </li>
 
-    <li><a class="ajax-link" href="#">Over mij</a></li>
+    <li><a class="ajax-link" href="over-mij.html">Over mij</a></li>
+    <li><a class="ajax-link" href="contact.html">Contact</a></li>
   </ul>
+
 
   <!-- <ul class="social-icon">
     <div class="social-index">
@@ -98,9 +101,9 @@
 
         <div class="text-intro" id="site-type">
 
-          <h1>Vormgeving & creatie</h1>
-          <h1 class="typewrite"><span>Portfolio</span></h1>
-          <p>Hier vind je een selectie van mijn grafisch werk.</p>
+          <!-- <h1>Vormgeving & creatie</h1> -->
+          <h1 class="typewrite"><span>_ </span></h1>
+          <p>Klik op onderstaande beelden voor meer details over de projecten.</p>
 
         </div>
 
@@ -111,11 +114,11 @@
 
 
     <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
-      <img src="img/portfolio/1.jpg">
-        <a class="ajax-link" href="single.html">
+      <img src="img/portfolio/toervl/TOERVL-Vakantie-Cover-SMALL.jpg">
+        <a class="ajax-link" href="toervl.html">
           <div class="grid-hover">
-            <h1>Single</h1>
-            <p>Branding</p>
+            <h1>Toerisme Vlaanderen</h1>
+            <p>Catalogi</p>
           </div>
         </a>
     </li>
@@ -181,12 +184,12 @@
   <footer>
 
     <div class="footer-margin">
-      <div class="social-footer">
+      <!-- <div class="social-footer">
         <a href="https://www.facebook.com/thomsooncom"><i class="fa fa-facebook"></i></a>
         <a href="https://www.behance.net/TomaszMazurczak"><i class="fa fa-behance"></i></a>
 
-      </div>
-      <div class="copyright">Â© Copyright 2015 Thomsoon.com. All Rights Reserved.</div>
+      </div> -->
+      <div class="copyright">© Copyright 2020 Peggy Van den Eynde. All Rights Reserved.</div>
 
 
 
