--- a/toervl.html
+++ b/toervl.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="utf-8">
-  <title>Peggy Van den Eynde | Vormgeving & Creatie</title>
+  <title>Peggy Van den Eynde | Vormgeving & creatie</title>
   <meta name="description" content="Peggy Van den Eynde, portfolio, vormgeving & creatie">
   <meta name="keywords" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
