--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
   <meta charset="utf-8">
-  <title>Peggy Van den Eynde | Vormgeving & Creatie</title>
+  <title>Peggy Van den Eynde | Vormgeving & creatie</title>
   <meta name="description" content="Peggy Van den Eynde, portfolio, vormgeving & creatie">
   <meta name="keywords" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -103,7 +103,7 @@
 
           <!-- <h1>Vormgeving & creatie</h1> -->
           <h1 class="typewrite"><span>_ </span></h1>
-          <p>Klik op onderstaande beelden voor meer details over de projecten.</p>
+          <p>Klik op onderstaande beelden voor meer details over deze projecten.</p>
 
         </div>
 
@@ -118,7 +118,7 @@
         <a class="ajax-link" href="toervl.html">
           <div class="grid-hover">
             <h1>Toerisme Vlaanderen</h1>
-            <p>Catalogi</p>
+            <p>#catalogus #z-card #easy-surfer</p>
           </div>
         </a>
     </li>
