--- a/toervl.html
+++ b/toervl.html
@@ -28,12 +28,12 @@
 
 <!--Preloader-->
 
-<div class="preloader" id="preloader">
+<!-- <div class="preloader" id="preloader">
     <div class="item">
       <div class="spinner">
       </div>
     </div>
-</div>
+</div> -->
 
 <div class="opacity-nav">
 
@@ -92,8 +92,6 @@
 
 </header>
 
-<div class="clear"></div>
-
   <!--Content-->
 
   <div class="content" id="ajax-content">
@@ -147,12 +145,12 @@
   <footer>
 
     <div class="footer-margin">
-      <div class="social-footer">
+      <!-- <div class="social-footer">
         <a href="https://www.facebook.com/thomsooncom"><i class="fa fa-facebook"></i></a>
         <a href="https://www.behance.net/TomaszMazurczak"><i class="fa fa-behance"></i></a>
 
-      </div>
-      <div class="copyright">© Copyright 2015 Thomsoon.com. All Rights Reserved.</div>
+      </div> -->
+      <div class="copyright">© Copyright 2020 Peggy Van den Eynde. All Rights Reserved.</div>
 
 
 
