--- a/toervl.html
+++ b/toervl.html
@@ -115,7 +115,8 @@
 
 				        <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 
-				        <img src="img/portfolio/toervl/TOERVL-Vakantie-Cover-MEDIUM.jpg" width="100%"><br/><br/><br/><br/>
+				        <img src="img/portfolio/toervl/TOERVL-Vakantie-Cover-MEDIUM.jpg" width="100%"><br/>
+                <p>Hier kan ook nog een tekstje onder.</p><br/><br/><br/>
 				        <img src="img/portfolio/toervl/TOERVL-Vakantie-Cover-MEDIUM.jpg" width="100%"><br/><br/><br/><br/>
 				        <img src="img/portfolio/toervl/TOERVL-Vakantie-Cover-MEDIUM.jpg" width="100%"><br/><br/><br/><br/>
 				        <img src="img/portfolio/toervl/TOERVL-Vakantie-Cover-MEDIUM.jpg" width="100%"><br/><br/><br/><br/>
