--- a/toervl.html
+++ b/toervl.html
@@ -115,8 +115,8 @@
 
 				        <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 
-				        <img src="img/portfolio/toervl/TOERVL-Vakantie-Cover-MEDIUM.jpg" width="100%"><br/>
-                <p>Hier kan ook nog een tekstje onder.</p><br/><br/><br/>
+				        <img src="img/portfolio/toervl/TOERVL-Vakantie-Cover-MEDIUM.jpg" width="100%">
+                <p>Hier kan ook nog een tekstje onder.</p><br/><br/><br/><br/>
 				        <img src="img/portfolio/toervl/TOERVL-Vakantie-Cover-MEDIUM.jpg" width="100%"><br/><br/><br/><br/>
 				        <img src="img/portfolio/toervl/TOERVL-Vakantie-Cover-MEDIUM.jpg" width="100%"><br/><br/><br/><br/>
 				        <img src="img/portfolio/toervl/TOERVL-Vakantie-Cover-MEDIUM.jpg" width="100%"><br/><br/><br/><br/>
@@ -126,8 +126,8 @@
 
 					        <div class="prev-next">
 
-					          <div class="prev-button"><a class="ajax-link" href="single-fullscreen.html">Previous work</a></div>
-					          <div class="next-button"><a class="ajax-link" href="projects.html">Next work</a></div>
+					          <div class="prev-button"><a class="ajax-link" href="index.html">Previous work</a></div>
+					          <div class="next-button"><a class="ajax-link" href="toervl.html">Next work</a></div>
 
 					        </div>
             </div>
