--- a/toervl.html
+++ b/toervl.html
@@ -116,7 +116,7 @@
 				        <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
 
 				        <img src="img/portfolio/toervl/TOERVL-Vakantie-Cover-MEDIUM.jpg" width="100%">
-                <p>Hier kan ook nog een tekstje onder.</p><br/><br/><br/><br/>
+                <p>Hier kan ook nog een tekstje onder over de specifieke visual.</p><br/><br/><br/><br/>
 				        <img src="img/portfolio/toervl/TOERVL-Vakantie-Cover-MEDIUM.jpg" width="100%"><br/><br/><br/><br/>
 				        <img src="img/portfolio/toervl/TOERVL-Vakantie-Cover-MEDIUM.jpg" width="100%"><br/><br/><br/><br/>
 				        <img src="img/portfolio/toervl/TOERVL-Vakantie-Cover-MEDIUM.jpg" width="100%"><br/><br/><br/><br/>
