--- a/toervl.html
+++ b/toervl.html
@@ -127,7 +127,7 @@
 					        <div class="prev-next">
 
 					          <div class="prev-button"><a class="ajax-link" href="index.html">Previous work</a></div>
-					          <div class="next-button"><a class="ajax-link" href="toervl.html">Next work</a></div>
+					          <div class="next-button"><a class="ajax-link" href="index.html">Next work</a></div>
 
 					        </div>
             </div>
