--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 
 <!--Preloader-->
 
-<!-- <div class="preloader" id="preloader">
+<div class="preloader" id="preloader">
     <div class="item">
       <div class="spinner">
       </div>
     </div>
-</div> -->
+</div>
 
 <div class="opacity-nav">
 
@@ -114,21 +114,31 @@
 
 
     <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
-      <img src="img/portfolio/toervl/TOERVL-Vakantie-Cover-SMALL.jpg">
+      <img src="img/portfolio/artooscorp/X-ARTOOS-CoverPreview.jpg">
         <a class="ajax-link" href="toervl.html">
           <div class="grid-hover">
-            <h1>Toerisme Vlaanderen</h1>
-            <p>#catalogus #z-card #easy-surfer</p>
+            <h1>Artoos</h1>
+            <p>#catalogus #z-card #any-surfer</p>
           </div>
         </a>
     </li>
 
     <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
-      <img src="img/portfolio/5.jpg">
+      <img src="img/portfolio/artooskoning/X-ARTOOS-KoningPreview.jpg">
         <a class="ajax-link" href="single.html">
           <div class="grid-hover">
-            <h1>Single</h1>
-            <p>Branding</p>
+            <h1>Artoos</h1>
+            <p>#catalogus #z-card #any-surfer</p>
+          </div>
+        </a>
+    </li>
+
+    <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
+      <img src="img/portfolio/capac/X-CAPAC-Cover.jpg">
+        <a class="ajax-link" href="single.html">
+          <div class="grid-hover">
+            <h1>Capac</h1>
+            <p>#catalogus #z-card #any-surfer</p>
           </div>
         </a>
     </li>
@@ -137,38 +147,68 @@
       <img src="img/portfolio/2.jpg">
         <a class="ajax-link" href="single.html">
           <div class="grid-hover">
-            <h1>Single</h1>
-            <p>Branding</p>
+            <h1>Gemeente Rotselaar</h1>
+            <p>#catalogus #z-card #any-surfer</p>
           </div>
         </a>
     </li>
 
     <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
-      <img src="img/portfolio/3.jpg">
+      <img src="img/portfolio/ninove/X-NINOVE---infografiek-poster.jpg">
         <a class="ajax-link" href="single.html">
           <div class="grid-hover">
-            <h1>Single</h1>
-            <p>Branding</p>
+            <h1>Gemeente Ninove</h1>
+            <p>#catalogus #z-card #any-surfer</p>
           </div>
         </a>
     </li>
 
     <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
-      <img src="img/portfolio/4.jpg">
+      <img src="img/portfolio/socmut/X-SOCMUT-cover-B.jpg">
         <a class="ajax-link" href="single.html">
           <div class="grid-hover">
-            <h1>Single</h1>
-            <p>Branding</p>
+            <h1>Socialistische mutualiteiten</h1>
+            <p>#catalogus #z-card #any-surfer</p>
           </div>
         </a>
     </li>
 
     <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
-      <img src="img/portfolio/6.jpg">
+      <img src="img/portfolio/toerismevl/X-TOERVL-Vakantie-Cover.jpg">
         <a class="ajax-link" href="single.html">
           <div class="grid-hover">
-            <h1>Single</h1>
-            <p>Branding</p>
+            <h1>Toerisme Vlaanderen</h1>
+            <p>#catalogus #z-card #any-surfer</p>
+          </div>
+        </a>
+    </li>
+
+    <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
+      <img src="img/portfolio/viessmann/X-VIESSMAN_DM_Members.jpg">
+        <a class="ajax-link" href="single.html">
+          <div class="grid-hover">
+            <h1>Viessmann</h1>
+            <p>#catalogus #z-card #any-surfer</p>
+          </div>
+        </a>
+    </li>
+
+    <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
+      <img src="img/portfolio/voka/X-VOKA-Ondernemers.jpg">
+        <a class="ajax-link" href="single.html">
+          <div class="grid-hover">
+            <h1>Voka</h1>
+            <p>#catalogus #z-card #any-surfer</p>
+          </div>
+        </a>
+    </li>
+
+    <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
+      <img src="img/portfolio/vsv/X-VSV-Bordspel-Verkeersweken-3D-DEF.jpg">
+        <a class="ajax-link" href="single.html">
+          <div class="grid-hover">
+            <h1>VSV</h1>
+            <p>#catalogus #z-card #any-surfer</p>
           </div>
         </a>
     </li>
