--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     </li>
 
     <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
-      <img src="img/portfolio/2.jpg">
+      <img src="img/portfolio/gemeenterotselaar/X-ROTSELAAR-Trots-meerdere-covers.jpg">
         <a class="ajax-link" href="single.html">
           <div class="grid-hover">
             <h1>Gemeente Rotselaar</h1>
