--- a/contact.html
+++ b/contact.html
@@ -28,12 +28,12 @@
 
 <!--Preloader-->
 
-<!-- <div class="preloader" id="preloader">
+<div class="preloader" id="preloader">
     <div class="item">
       <div class="spinner">
       </div>
     </div>
-</div> -->
+</div>
 
 <div class="opacity-nav">
 
@@ -117,7 +117,7 @@
           </div>
 
         </div>
-        
+
 
   </div>
 
