portfolio links update

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
       <img src="img/portfolio/artooscorp/X-ARTOOS-CoverPreview.jpg">
-        <a class="ajax-link" href="toervl.html">
+        <a class="ajax-link" href="portolio_artooscorp.html">
           <div class="grid-hover">
             <h1>Artoos</h1>
             <p>#catalogus #z-card #any-surfer</p>
@@ -125,7 +125,7 @@
 
     <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
       <img src="img/portfolio/artooskoning/X-ARTOOS-KoningPreview.jpg">
-        <a class="ajax-link" href="single.html">
+        <a class="ajax-link" href="portolio_artooskoning.html">
           <div class="grid-hover">
             <h1>Artoos</h1>
             <p>#catalogus #z-card #any-surfer</p>
@@ -135,7 +135,7 @@
 
     <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
       <img src="img/portfolio/capac/X-CAPAC-Cover.jpg">
-        <a class="ajax-link" href="single.html">
+        <a class="ajax-link" href="portolio_capac.html">
           <div class="grid-hover">
             <h1>Capac</h1>
             <p>#catalogus #z-card #any-surfer</p>
@@ -145,7 +145,7 @@
 
     <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
       <img src="img/portfolio/gemeenterotselaar/X-ROTSELAAR-Trots-meerdere-covers.jpg">
-        <a class="ajax-link" href="single.html">
+        <a class="ajax-link" href="portolio_ninove.html">
           <div class="grid-hover">
             <h1>Gemeente Rotselaar</h1>
             <p>#catalogus #z-card #any-surfer</p>
@@ -155,7 +155,7 @@
 
     <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
       <img src="img/portfolio/ninove/X-NINOVE---infografiek-poster.jpg">
-        <a class="ajax-link" href="single.html">
+        <a class="ajax-link" href="portolio_rotselaar.html">
           <div class="grid-hover">
             <h1>Gemeente Ninove</h1>
             <p>#catalogus #z-card #any-surfer</p>
@@ -165,7 +165,7 @@
 
     <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
       <img src="img/portfolio/socmut/X-SOCMUT-cover-B.jpg">
-        <a class="ajax-link" href="single.html">
+        <a class="ajax-link" href="portolio_socmut.html">
           <div class="grid-hover">
             <h1>Socialistische mutualiteiten</h1>
             <p>#catalogus #z-card #any-surfer</p>
@@ -175,7 +175,7 @@
 
     <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
       <img src="img/portfolio/toerismevl/X-TOERVL-Vakantie-Cover.jpg">
-        <a class="ajax-link" href="single.html">
+        <a class="ajax-link" href="portolio_toerismevl.html">
           <div class="grid-hover">
             <h1>Toerisme Vlaanderen</h1>
             <p>#catalogus #z-card #any-surfer</p>
@@ -185,7 +185,7 @@
 
     <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
       <img src="img/portfolio/viessmann/X-VIESSMAN_DM_Members.jpg">
-        <a class="ajax-link" href="single.html">
+        <a class="ajax-link" href="portolio_viessmann.html">
           <div class="grid-hover">
             <h1>Viessmann</h1>
             <p>#catalogus #z-card #any-surfer</p>
@@ -195,7 +195,7 @@
 
     <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
       <img src="img/portfolio/voka/X-VOKA-Ondernemers.jpg">
-        <a class="ajax-link" href="single.html">
+        <a class="ajax-link" href="portolio_voka.html">
           <div class="grid-hover">
             <h1>Voka</h1>
             <p>#catalogus #z-card #any-surfer</p>
@@ -205,7 +205,7 @@
 
     <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
       <img src="img/portfolio/vsv/X-VSV-Bordspel-Verkeersweken-3D-DEF.jpg">
-        <a class="ajax-link" href="single.html">
+        <a class="ajax-link" href="portolio_vsv.html">
           <div class="grid-hover">
             <h1>VSV</h1>
             <p>#catalogus #z-card #any-surfer</p>
