--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/style-responsive.css">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -106,8 +106,8 @@
             <p><strong>Peggy Van den Eynde</strong><br/>
             Visvijverstraat 8A<br/>
             2230 Ramsel<br/>
-            0478 64 19 64<br/>
-            <a href="mailto:peggy.vde@gmail.com">peggy.vde@gmail.com</a></p>
+            <i class="fa fa-phone fa-fw"></i>&nbsp;<a href="tel:+32478641964">0478 64 19 64</a><br/>
+            <i class="fa fa-envelope fa-fw"></i>&nbsp;<a href="mailto:peggy.vde@gmail.com">peggy.vde@gmail.com</a></p>
             <br/><br/><br/><br/><br/>
 
           </div>
