--- a/over-mij.html
+++ b/over-mij.html
@@ -111,7 +111,8 @@
               </strong> Het CC&nbsp;pakket heb ik, dankzij mijn <strong>ervaring,</strong> stevig in de vingers.
               Ik ben zeer <strong>geduldig</strong> en <strong>blijf kalm,</strong> ook onder hoge druk.
               Het liefst werk ik met korte <strong>communicatielijnen</strong> en in <strong>dialoog,</strong> zowel met collega’s als klanten.
-              Want <strong>samenwerken</strong> en overleggen vind ik leerrijk. Ik apprecieer het dan ook als ik <strong>feedback</strong> krijg.</p><br/>
+              Want <strong>samenwerken</strong> en overleggen vind ik leerrijk. Ik apprecieer het dan ook als ik <strong>feedback</strong> krijg.</p>
+              <br/><br/><br/>
 
           </div>
 
