--- a/index.html
+++ b/index.html
@@ -213,6 +213,16 @@
         </a>
     </li>
 
+    <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
+      <img src="img/portfolio/belorta/X-BELORTA-Cover-stapel.jpg">
+        <a class="ajax-link" href="portolio_belorta.html">
+          <div class="grid-hover">
+            <h1>Belorta</h1>
+            <p>#catalogus #z-card #any-surfer</p>
+          </div>
+        </a>
+    </li>
+
   </ul>
 
   </div>
