--- a/index.html
+++ b/index.html
@@ -117,88 +117,8 @@
       <img src="img/portfolio/artooscorp/X-ARTOOS-CoverPreview.jpg">
         <a class="ajax-link" href="portolio_artooscorp.html">
           <div class="grid-hover">
-            <h1>Artoos</h1>
-            <p>#catalogus #z-card #any-surfer</p>
-          </div>
-        </a>
-    </li>
-
-    <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
-      <img src="img/portfolio/artooskoning/X-ARTOOS-KoningPreview.jpg">
-        <a class="ajax-link" href="portolio_artooskoning.html">
-          <div class="grid-hover">
-            <h1>Artoos</h1>
-            <p>#catalogus #z-card #any-surfer</p>
-          </div>
-        </a>
-    </li>
-
-    <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
-      <img src="img/portfolio/capac/X-CAPAC-Cover.jpg">
-        <a class="ajax-link" href="portolio_capac.html">
-          <div class="grid-hover">
-            <h1>Capac</h1>
-            <p>#catalogus #z-card #any-surfer</p>
-          </div>
-        </a>
-    </li>
-
-    <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
-      <img src="img/portfolio/gemeenterotselaar/X-ROTSELAAR-Trots-meerdere-covers.jpg">
-        <a class="ajax-link" href="portolio_rotselaar.html">
-          <div class="grid-hover">
-            <h1>Gemeente Rotselaar</h1>
-            <p>#catalogus #z-card #any-surfer</p>
-          </div>
-        </a>
-    </li>
-
-    <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
-      <img src="img/portfolio/ninove/X-NINOVE---infografiek-poster.jpg">
-        <a class="ajax-link" href="portolio_ninove.html">
-          <div class="grid-hover">
-            <h1>Gemeente Ninove</h1>
-            <p>#catalogus #z-card #any-surfer</p>
-          </div>
-        </a>
-    </li>
-
-    <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
-      <img src="img/portfolio/socmut/X-SOCMUT-cover-B.jpg">
-        <a class="ajax-link" href="portolio_socmut.html">
-          <div class="grid-hover">
-            <h1>Socialistische mutualiteiten</h1>
-            <p>#catalogus #z-card #any-surfer</p>
-          </div>
-        </a>
-    </li>
-
-    <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
-      <img src="img/portfolio/toerismevl/X-TOERVL-Vakantie-Cover.jpg">
-        <a class="ajax-link" href="portolio_toerismevl.html">
-          <div class="grid-hover">
-            <h1>Toerisme Vlaanderen</h1>
-            <p>#catalogus #z-card #any-surfer</p>
-          </div>
-        </a>
-    </li>
-
-    <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
-      <img src="img/portfolio/viessmann/X-VIESSMAN_DM_Members.jpg">
-        <a class="ajax-link" href="portolio_viessmann.html">
-          <div class="grid-hover">
-            <h1>Viessmann</h1>
-            <p>#catalogus #z-card #any-surfer</p>
-          </div>
-        </a>
-    </li>
-
-    <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
-      <img src="img/portfolio/voka/X-VOKA-Ondernemers.jpg">
-        <a class="ajax-link" href="portolio_voka.html">
-          <div class="grid-hover">
-            <h1>Voka</h1>
-            <p>#catalogus #z-card #any-surfer</p>
+            <h1>artoos group</h1>
+            <p>#corporate brochure</p>
           </div>
         </a>
     </li>
@@ -208,17 +128,113 @@
         <a class="ajax-link" href="portolio_vsv.html">
           <div class="grid-hover">
             <h1>VSV</h1>
-            <p>#catalogus #z-card #any-surfer</p>
+            <p>#verpakking #brochures #handleiding</p>
           </div>
         </a>
     </li>
+
+    <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
+      <img src="img/portfolio/logo/X-Met5aantafel.jpg">
+        <a class="ajax-link" href="portolio_logo.html">
+          <div class="grid-hover">
+            <h1>Visuele identiteit</h1>
+            <p>#logo</p>
+          </div>
+        </a>
+    </li>
+
+        <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
+          <img src="img/portfolio/gemeenterotselaar/X-ROTSELAAR-Trots-meerdere-covers.jpg">
+            <a class="ajax-link" href="portolio_rotselaar.html">
+              <div class="grid-hover">
+                <h1>Gemeente Rotselaar</h1>
+                <p>#magazine #logo</p>
+              </div>
+            </a>
+        </li>
+
+    <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
+      <img src="img/portfolio/capac/X-CAPAC-Cover.jpg">
+        <a class="ajax-link" href="portolio_capac.html">
+          <div class="grid-hover">
+            <h1>Capac</h1>
+            <p>#magazine</p>
+          </div>
+        </a>
+    </li>
+
+
+    <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
+      <img src="img/portfolio/ninove/X-NINOVE---infografiek-poster.jpg">
+        <a class="ajax-link" href="portolio_ninove.html">
+          <div class="grid-hover">
+            <h1>Gemeente Ninove</h1>
+            <p>#infografiek</p>
+          </div>
+        </a>
+    </li>
+
+    <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
+      <img src="img/portfolio/artooskoning/X-ARTOOS-KoningPreview.jpg">
+        <a class="ajax-link" href="portolio_artooskoning.html">
+          <div class="grid-hover">
+            <h1>artoos group</h1>
+            <p>#brochure</p>
+          </div>
+        </a>
+    </li>
+
+
+    <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
+      <img src="img/portfolio/socmut/X-SOCMUT-cover-B.jpg">
+        <a class="ajax-link" href="portolio_socmut.html">
+          <div class="grid-hover">
+            <h1>Socialistische mutualiteiten</h1>
+            <p>#magazine #infografiek</p>
+          </div>
+        </a>
+    </li>
+
+    <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
+      <img src="img/portfolio/toerismevl/X-TOERVL-Vakantie-Cover.jpg">
+        <a class="ajax-link" href="portolio_toerismevl.html">
+          <div class="grid-hover">
+            <h1>Toerisme Vlaanderen</h1>
+            <p>#catalogi #z-card #any-surfer</p>
+          </div>
+        </a>
+    </li>
+
+    <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
+      <img src="img/portfolio/viessmann/X-VIESSMAN_DM_Members.jpg">
+        <a class="ajax-link" href="portolio_viessmann.html">
+          <div class="grid-hover">
+            <h1>Viessmann</h1>
+            <p>#DM #selfmailer</p>
+          </div>
+        </a>
+    </li>
+
+    <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
+      <img src="img/portfolio/voka/X-VOKA-Ondernemers.jpg">
+        <a class="ajax-link" href="portolio_voka.html">
+          <div class="grid-hover">
+            <h1>Voka</h1>
+            <p>#magazine</p>
+          </div>
+        </a>
+    </li>
+
+
+
+
 
     <li class="grid-item" data-jkit="[show:delay=3000;speed=500;animation=fade]">
       <img src="img/portfolio/belorta/X-BELORTA-Cover-stapel.jpg">
         <a class="ajax-link" href="portolio_belorta.html">
           <div class="grid-hover">
             <h1>Belorta</h1>
-            <p>#catalogus #z-card #any-surfer</p>
+            <p>#magazine</p>
           </div>
         </a>
     </li>
