--- a/over-mij.html
+++ b/over-mij.html
@@ -105,7 +105,7 @@
             <p><img style="width:100%;" src="img/overmij/Peggy_VandenEynde_portret.jpg" alt="peggy portret"></p>
             <h2>Kerncompetenties</h2>
             <p>Ik ben een <strong>creatief persoon</strong> en lever graag <strong>kwalitatief werk</strong> af.
-              Door zeer <strong>estructureerd</strong> te werken kom ik snel tot een concreet resultaat.
+              Door zeer <strong>gestructureerd</strong> te werken kom ik snel tot een concreet resultaat.
               Ik werk graag <strong>autonoom</strong> en voel me <strong>verantwoordelijk</strong> voor wat ik doe.
               Omdat ik zeer <strong>gefocust</strong> ben, ervaren mijn collega’s mij als <strong>professioneel.
               </strong> Het CC&nbsp;pakket heb ik, dankzij mijn <strong>ervaring,</strong> stevig in de vingers.
