--- a/portolio_toerismevl.html
+++ b/portolio_toerismevl.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/style-responsive.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -99,7 +99,7 @@
 
         <div class="text-intro">
 
-          <h1>TOERISME VLAANDEREN</h1>
+          <h1>Toerisme Vlaanderen</h1>
 
 
 	          <div class="one-column">
@@ -108,7 +108,7 @@
 
 
 		          <div class="two-column">
-		            <p>Hier komt info over klant en/of projecten...</p>
+		            <p>Vormgeving van catalogi voor toegankelijke vakanties en daguitstappen in drie talen. De catalogi omzetten naar een toegankelijk digitaal leesbaar document met anysurfer voor blinden en slechtzienden.</p>
 		          </div>
 
                 <div class="clear"></div>
