--- a/portolio_voka.html
+++ b/portolio_voka.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/style-responsive.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -99,16 +99,16 @@
 
         <div class="text-intro">
 
-          <h1>VOKA</h1>
+          <h1>Voka</h1>
 
 
 	          <div class="one-column">
-	            <p>Catalogi, z-card</p>
+	            <p>Magazine</p>
 	          </div>
 
 
 		          <div class="two-column">
-		            <p>Hier komt info over klant en/of projecten...</p>
+		            <p>Concept voorstellen voor een update van het magazine ‘Ondernemers’. </p>
 		          </div>
 
                 <div class="clear"></div>
