--- a/portolio_logo.html
+++ b/portolio_logo.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/style-responsive.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -119,7 +119,8 @@
                 <img src="img/portfolio/logo/2-Crius-group.jpg" width="100%"><br/><br/><br/><br/>
                 <img src="img/portfolio/logo/3-De-Acht.jpg" width="100%"><br/><br/><br/><br/>
                 <img src="img/portfolio/logo/4-Style.jpg" width="100%"><br/><br/><br/><br/>
-				        <img src="img/portfolio/logo/5-Promat.jpg" width="100%">
+				        <img src="img/portfolio/logo/5-Promat.jpg" width="100%"><br/><br/><br/><br/>
+                <img src="img/portfolio/logo/6-THE-KNOWLEDGE-BOX-Visitekaartje.jpg" width="100%">
 
 					        <div class="prev-next">
 
