--- a/portolio_rotselaar.html
+++ b/portolio_rotselaar.html
@@ -108,7 +108,7 @@
 
 
 		          <div class="two-column">
-		            <p>Logo ontwerp en lay-out magazine. Het magazine is zo ontwikkeld dat de klant, met een beperkte kennis van indesign, dit zelf kan opmaken met behulp van vaste paragraafstijlen en beeldkaders.</p>
+		            <p>Logo-ontwerp en lay-out magazine. Het magazine is zo ontwikkeld dat de klant, met een beperkte kennis van indesign, dit zelf kan opmaken met behulp van vaste paragraafstijlen en beeldkaders.</p>
 		          </div>
 
                 <div class="clear"></div>
