--- a/portolio_voka.html
+++ b/portolio_voka.html
@@ -120,8 +120,8 @@
 
 					        <div class="prev-next">
 
-					          <div class="prev-button"><a class="ajax-link" href="index.html">Previous work</a></div>
-					          <div class="next-button"><a class="ajax-link" href="index.html">Next work</a></div>
+					          <div class="prev-button"><a class="ajax-link" href="portolio_viessmann.html">Previous work</a></div>
+					          <div class="next-button"><a class="ajax-link" href="portolio_artooscorp.html">Next work</a></div>
 
 					        </div>
             </div>
