--- a/portolio_artooscorp.html
+++ b/portolio_artooscorp.html
@@ -123,8 +123,8 @@
 
 					        <div class="prev-next">
 
-					          <div class="prev-button"><a class="ajax-link" href="index.html">Previous work</a></div>
-					          <div class="next-button"><a class="ajax-link" href="index.html">Next work</a></div>
+					          <div class="prev-button"><a class="ajax-link" href="portolio_vsv.html">Previous work</a></div>
+					          <div class="next-button"><a class="ajax-link" href="portolio_voka.html">Next work</a></div>
 
 					        </div>
             </div>
