--- a/portolio_logo.html
+++ b/portolio_logo.html
@@ -124,8 +124,8 @@
 
 					        <div class="prev-next">
 
-					          <div class="prev-button"><a class="ajax-link" href="index.html">Previous work</a></div>
-					          <div class="next-button"><a class="ajax-link" href="index.html">Next work</a></div>
+					          <div class="prev-button"><a class="ajax-link" href="portolio_vsv.html">Previous work</a></div>
+					          <div class="next-button"><a class="ajax-link" href="portolio_rotselaar.html">Next work</a></div>
 
 					        </div>
             </div>
