--- a/portolio_ninove.html
+++ b/portolio_ninove.html
@@ -119,8 +119,8 @@
 
 					        <div class="prev-next">
 
-					          <div class="prev-button"><a class="ajax-link" href="index.html">Previous work</a></div>
-					          <div class="next-button"><a class="ajax-link" href="index.html">Next work</a></div>
+					          <div class="prev-button"><a class="ajax-link" href="portolio_capac.html">Previous work</a></div>
+					          <div class="next-button"><a class="ajax-link" href="portolio_artooskoning.html">Next work</a></div>
 
 					        </div>
             </div>
