--- a/portolio_socmut.html
+++ b/portolio_socmut.html
@@ -122,8 +122,8 @@
 
 					        <div class="prev-next">
 
-					          <div class="prev-button"><a class="ajax-link" href="index.html">Previous work</a></div>
-					          <div class="next-button"><a class="ajax-link" href="index.html">Next work</a></div>
+					          <div class="prev-button"><a class="ajax-link" href="portolio_artooskoning.html">Previous work</a></div>
+					          <div class="next-button"><a class="ajax-link" href="portolio_toerismevl.html">Next work</a></div>
 
 					        </div>
             </div>
