--- a/portolio_toerismevl.html
+++ b/portolio_toerismevl.html
@@ -123,8 +123,8 @@
 
 					        <div class="prev-next">
 
-					          <div class="prev-button"><a class="ajax-link" href="index.html">Previous work</a></div>
-					          <div class="next-button"><a class="ajax-link" href="index.html">Next work</a></div>
+					          <div class="prev-button"><a class="ajax-link" href="portolio_socmut.html">Previous work</a></div>
+					          <div class="next-button"><a class="ajax-link" href="portolio_belorta.html">Next work</a></div>
 
 					        </div>
             </div>
