--- a/portolio_viessmann.html
+++ b/portolio_viessmann.html
@@ -121,8 +121,8 @@
 
 					        <div class="prev-next">
 
-					          <div class="prev-button"><a class="ajax-link" href="index.html">Previous work</a></div>
-					          <div class="next-button"><a class="ajax-link" href="toervl.html">Next work</a></div>
+					          <div class="prev-button"><a class="ajax-link" href="portolio_belorta.html">Previous work</a></div>
+					          <div class="next-button"><a class="ajax-link" href="portolio_voka.html">Next work</a></div>
 
 					        </div>
             </div>
