--- a/portolio_vsv.html
+++ b/portolio_vsv.html
@@ -125,8 +125,8 @@
 
 					        <div class="prev-next">
 
-					          <div class="prev-button"><a class="ajax-link" href="index.html">Previous work</a></div>
-					          <div class="next-button"><a class="ajax-link" href="index.html">Next work</a></div>
+					          <div class="prev-button"><a class="ajax-link" href="portolio_artooscorp.html">Previous work</a></div>
+					          <div class="next-button"><a class="ajax-link" href="portolio_logo.html">Next work</a></div>
 
 					        </div>
             </div>
