--- a/portolio_artooscorp.html
+++ b/portolio_artooscorp.html
@@ -108,7 +108,7 @@
 
 
 		          <div class="two-column">
-		            <p>Concept en lay-out van de corporate brochure voor artoos group. Styling en begeleiding van fotoshooting met collega’s.</p>
+		            <p>Concept en vormgeving van de corporate brochure voor artoos group.<br/> Styling en begeleiding van fotoshooting met collega’s.</p>
 		          </div>
 
                 <div class="clear"></div>
