--- a/portolio_artooskoning.html
+++ b/portolio_artooskoning.html
@@ -103,12 +103,13 @@
 
 
 	          <div class="one-column">
-	            <p>Brochure</p>
+	            <p>‘One-off’ magazine</p>
 	          </div>
 
 
 		          <div class="two-column">
-		            <p>Concept en lay-out van een brochure voor de kinderen van de koning over het drukprocedé. </p>
+		            <p>Naar aanleiding van een bezoek van koning Filip en koningin Mathilde aan artoos group, maakten we een magazine over artoos group voor hun 4 kinderen. Het magazine werd gedrukt tijdens hun bezoek. Op de cover stond een foto van de aankomst van het koningspaar bij artoos group.
+Ik zorgde voor concept en vormgeving.</p>
 		          </div>
 
                 <div class="clear"></div>
