--- a/portolio_rotselaar.html
+++ b/portolio_rotselaar.html
@@ -108,7 +108,8 @@
 
 
 		          <div class="two-column">
-		            <p>Logo-ontwerp en lay-out magazine. Het magazine is zo ontwikkeld dat de klant, met een beperkte kennis van indesign, dit zelf kan opmaken met behulp van vaste paragraafstijlen en beeldkaders.</p>
+		            <p>Volledig ontwerp van het magazine; vormgeving en logo.<br/>
+Het was een vereiste van de klant dat hij het magazine zelf zou kunnen opmaken - ondanks zijn beperkte inDesign kennis. Daarom ontwierp ik een heldere structuur met vaste paragraafstijlen en beeldkaders.</p>
 		          </div>
 
                 <div class="clear"></div>
