--- a/portolio_socmut.html
+++ b/portolio_socmut.html
@@ -103,12 +103,13 @@
 
 
 	          <div class="one-column">
-	            <p>Magazine</p>
+	            <p>Magazine, infografiek</p>
 	          </div>
 
 
 		          <div class="two-column">
-		            <p>Vormgeven van het magazine voor personen met een handicap.</p>
+		            <p>Vormgeving van ‘dialoog’, het magazine van de Socialistische Mutualiteiten voor personen met een handicap.<br/>
+Opmaak van affiches.</p>
 		          </div>
 
                 <div class="clear"></div>
