--- a/portolio_toerismevl.html
+++ b/portolio_toerismevl.html
@@ -103,12 +103,13 @@
 
 
 	          <div class="one-column">
-	            <p>Catalogi, z-card</p>
+	            <p>Catalogi, z-card, Anysurfer</p>
 	          </div>
 
 
 		          <div class="two-column">
-		            <p>Vormgeving van catalogi voor toegankelijke vakanties en daguitstappen in drie talen. De catalogi omzetten naar een toegankelijk digitaal leesbaar document met anysurfer voor blinden en slechtzienden.</p>
+		            <p>Vormgeving van catalogi en Z-card voor toegankelijke vakanties en daguitstappen, in drie talen.<br/>
+Met anysurfer zette ik de catalogi om naar een toegankelijk digitaal leesbaar document voor blinden en slechtzienden.</p>
 		          </div>
 
                 <div class="clear"></div>
