--- a/portolio_viessmann.html
+++ b/portolio_viessmann.html
@@ -108,7 +108,7 @@
 
 
 		          <div class="two-column">
-		            <p>Concept en lay-out van DM en selfmailer</p>
+		            <p>Concept en vormgeving van DM en selfmailer</p>
 		          </div>
 
                 <div class="clear"></div>
