--- a/portolio_voka.html
+++ b/portolio_voka.html
@@ -99,16 +99,16 @@
 
         <div class="text-intro">
 
-          <h1>Voka</h1>
+          <h1>Voka Vlaams-Brabant</h1>
 
 
 	          <div class="one-column">
-	            <p>Magazine</p>
+	            <p>Ledenmagazine</p>
 	          </div>
 
 
 		          <div class="two-column">
-		            <p>Concept voorstellen voor een update van het magazine ‘Ondernemers’. </p>
+		            <p>Voorstellen voor een update van de lay-out van ‘Ondernemers’, het magazine van Voka Vlaams-Brabant.</p>
 		          </div>
 
                 <div class="clear"></div>
