--- a/portolio_vsv.html
+++ b/portolio_vsv.html
@@ -103,12 +103,12 @@
 
 
 	          <div class="one-column">
-	            <p>Verpakking, spelletjes, brochures, handleidingen, enz...</p>
+	            <p>Verpakking, spelletjes, brochures, handleidingen</p>
 	          </div>
 
 
 		          <div class="two-column">
-		            <p>Ontwerpen van multidiciplinaire materialen nodig voor verkeerseducatie in de kleuter-, basisscholen en secundair onderwijs.</p>
+		            <p>De voorbije jaren was ik de vaste vormgever voor VSV. Ik ondersteunde hen bij al hun communicatieprojecten gericht op verkeerseducatie in basischolen. Daardoor kon ik heel veel toffe dingen ontwerpen.  Van spelletjes tot infopakketten.</p>
 		          </div>
 
                 <div class="clear"></div>
