--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <a class="ajax-link" href="portolio_vsv.html">
           <div class="grid-hover">
             <h1>VSV</h1>
-            <p>#verpakking #brochures #handleiding</p>
+            <p>#verpakking #spelletjes #brochures</p>
           </div>
         </a>
     </li>
@@ -158,7 +158,7 @@
         <a class="ajax-link" href="portolio_capac.html">
           <div class="grid-hover">
             <h1>Capac</h1>
-            <p>#magazine</p>
+            <p>#personeelsmagazine</p>
           </div>
         </a>
     </li>
@@ -179,7 +179,7 @@
         <a class="ajax-link" href="portolio_artooskoning.html">
           <div class="grid-hover">
             <h1>artoos group</h1>
-            <p>#brochure</p>
+            <p>#'one-off' magazine</p>
           </div>
         </a>
     </li>
@@ -200,7 +200,7 @@
         <a class="ajax-link" href="portolio_toerismevl.html">
           <div class="grid-hover">
             <h1>Toerisme Vlaanderen</h1>
-            <p>#catalogi #z-card #any-surfer</p>
+            <p>#catalogi #z-card #anysurfer</p>
           </div>
         </a>
     </li>
@@ -219,8 +219,8 @@
       <img src="img/portfolio/voka/X-VOKA-Ondernemers.jpg">
         <a class="ajax-link" href="portolio_voka.html">
           <div class="grid-hover">
-            <h1>Voka</h1>
-            <p>#magazine</p>
+            <h1>Voka Vlaams-Brabant</h1>
+            <p>#ledenmagazine</p>
           </div>
         </a>
     </li>
