--- a/portolio_belorta.html
+++ b/portolio_belorta.html
@@ -103,12 +103,12 @@
 
 
 	          <div class="one-column">
-	            <p>Magazine</p>
+	            <p>Bedrijfsmagazine</p>
 	          </div>
 
 
 		          <div class="two-column">
-		            <p>Bedrijfsmagazine BelOrta News<p>
+		            <p>Vormgeving van het bedrijfsmagazine BelOrta News<p>
 		          </div>
 
                 <div class="clear"></div>
