--- a/portolio_capac.html
+++ b/portolio_capac.html
@@ -103,12 +103,12 @@
 
 
 	          <div class="one-column">
-	            <p>Magazine</p>
+	            <p>Personeelsmagazine</p>
 	          </div>
 
 
 		          <div class="two-column">
-		            <p>Concept voorstellen voor het  personeelsmagazine binnen de lijnen van de huisstijl. </p>
+		            <p>Conceptvoorstellen voor het personeelsmagazine binnen de lijnen van de huisstijl. </p>
 		          </div>
 
                 <div class="clear"></div>
