--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 
 <html lang="en">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106821762-4"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-106821762-4');
+  </script>
 
   <meta charset="utf-8">
   <title>Peggy Van den Eynde | Vormgeving & creatie</title>
