Title pages update

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </script>
 
   <meta charset="utf-8">
-  <title>Peggy Van den Eynde | Vormgeving & creatie</title>
+  <title>Peggy Van den Eynde | Vormgeving & creatie | Home</title>
   <meta name="description" content="Peggy Van den Eynde, portfolio, vormgeving & creatie">
   <meta name="keywords" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
