--- a/portolio_vsv.html
+++ b/portolio_vsv.html
@@ -117,7 +117,7 @@
 
 
 		          <div class="two-column">
-		            <p>De voorbije jaren was ik de vaste vormgever voor VSV. Ik ondersteunde hen bij al hun communicatieprojecten gericht op verkeerseducatie in basischolen. Daardoor kon ik heel veel toffe dingen ontwerpen.  Van spelletjes tot infopakketten.</p>
+		            <p>De voorbije jaren was ik de vaste vormgever voor VSV. Ik ondersteunde hen bij al hun communicatieprojecten gericht op verkeerseducatie in basisscholen. Daardoor kon ik heel veel toffe dingen ontwerpen.  Van spelletjes tot infopakketten.</p>
 		          </div>
 
                 <div class="clear"></div>
